Initial support for loading Windows7 .wim images via WinPE/ImageX.
1. Support for "one-shot" PXE booting ala the one-shot osid. Switches to
   pxelinux to boot WinPE and then switch back after done. Painful now
   because we have to HUP dhcpd everytime we change the PXE path, but we
   may be able to fix this in the future by going all-pxelinux-all-the-time.

2. Added pxe_select, analogous to os_select, for changing the pxe_boot_path
   including the one time path.

3. Added the WIMRELOAD state machine to shepherd a node through the process.
   Still has some rough edges and may need refining.

--- a/configure.in
+++ b/configure.in
@@ -927,7 +927,7 @@ outfiles="$outfiles Makeconf GNUmakefile \
 	tbsetup/console_reset tbsetup/bwconfig tbsetup/power_rpc27.pm \
 	tbsetup/power_mail.pm tbsetup/power_whol.pm \
 	tbsetup/os_load tbsetup/os_setup tbsetup/os_select tbsetup/power \
-	tbsetup/node_reboot tbsetup/nscheck \
+	tbsetup/node_reboot tbsetup/nscheck tbsetup/pxe_select \
 	tbsetup/resetvlans tbsetup/rmuser tbsetup/rmproj \
 	tbsetup/sched_reload tbsetup/sched_reserve tbsetup/reload_daemon \
 	tbsetup/batchexp tbsetup/batch_daemon tbsetup/repos_daemon \
