--- a/db/EmulabConstants.pm.in
+++ b/db/EmulabConstants.pm.in
@@ -139,8 +139,8 @@ use vars qw(@ISA @EXPORT);
 	 TBDB_EXPT_WORKDIR
 	 TB_OSID_MBKERNEL 
 	 TB_OSID_FREEBSD_MFS TB_OSID_FRISBEE_MFS
-	 TBDB_TBCONTROL_RESET TBDB_TBCONTROL_RELOADDONE
-	 TBDB_TBCONTROL_RELOADDONE_V2
+	 TBDB_TBCONTROL_PXERESET TBDB_TBCONTROL_RESET
+	 TBDB_TBCONTROL_RELOADDONE TBDB_TBCONTROL_RELOADDONE_V2
 	 TBDB_TBCONTROL_TIMEOUT TBDB_NO_STATE_TIMEOUT
 	 TBDB_TBCONTROL_PXEBOOT TBDB_TBCONTROL_BOOTING
 	 TBDB_TBCONTROL_CHECKGENISUP
@@ -454,6 +454,7 @@ sub TBDB_ALLOCSTATE_RES_REBOOT()       { "RES_REBOOT"; }
 sub TBDB_ALLOCSTATE_RES_TEARDOWN()     { "RES_TEARDOWN"; }
 sub TBDB_ALLOCSTATE_UNKNOWN()          { "UNKNOWN"; };
 
+sub TBDB_TBCONTROL_PXERESET	{ "PXERESET"; }
 sub TBDB_TBCONTROL_RESET	{ "RESET"; }
 sub TBDB_TBCONTROL_RELOADDONE	{ "RELOADDONE"; }
 sub TBDB_TBCONTROL_RELOADDONE_V2{ "RELOADDONEV2"; }
