--- a/tbsetup/tbprerun.in
+++ b/tbsetup/tbprerun.in
@@ -1,7 +1,7 @@
 #!/usr/bin/perl -w
 #
 # EMULAB-COPYRIGHT
-# Copyright (c) 2000-2010 University of Utah and the Flux Group.
+# Copyright (c) 2000-2011 University of Utah and the Flux Group.
 # All rights reserved.
 #
 use strict;
@@ -406,7 +406,7 @@ if ($experiment->elabinelab() &&
 
 	$experiment->TableUpdate("virt_nodes",
 				 "type='$type',fixed='$fixed'",
-				 "vname='$vname'")
+				 "vname='$vname'") == 0
 	    or fatal("Could not update virt_node info for $experiment!");
     }
 }
