--- a/clientside/tmcc/freebsd/init/GNUmakefile.in
+++ b/clientside/tmcc/freebsd/init/GNUmakefile.in
@@ -28,6 +28,9 @@ endif
 ifeq ($(FBSDVERSION),FreeBSD8)
 FSUBDIR	       = 8
 endif
+ifeq ($(FBSDVERSION),FreeBSD9)
+FSUBDIR	       = 9
+endif
 SUBDIRS	       = $(FSUBDIR)
 
 all:
