--- a/os/imagezip/GNUmakefile.in
+++ b/os/imagezip/GNUmakefile.in
@@ -49,7 +49,9 @@ WITH_LTHREADS	= 0
 ifneq ($(FBSDREL),5.3)
 ifneq ($(FBSDMAJ),7)
 ifneq ($(FBSDMAJ),8)
+ifneq ($(FBSDMAJ),9)
 WITH_LTHREADS	= 1
+endif
 endif
 endif
 endif
