More fixes to client side for ancient BSD (4.10).

--- a/clientside/sensors/GNUmakefile.in
+++ b/clientside/sensors/GNUmakefile.in
@@ -12,9 +12,13 @@ SYSTEM         := $(shell uname -s)
 include $(OBJDIR)/Makeconf
 
 SUBDIRS		= slothd
+ifeq ($(SYSTEM),FreeBSD)
+FBSDVERSION   := $(shell uname -v | sed -e 's/FreeBSD \([0-9]\).*/FreeBSD\1/')
 ifeq ($(FBSDVERSION),FreeBSD4)
 SUBDIRS	+= canaryd
 endif
+endif
+
 all:	all-subdirs
 
 include $(TESTBED_SRCDIR)/GNUmakerules
