--- a/clientside/sensors/canaryd/GNUmakefile.in
+++ b/clientside/sensors/canaryd/GNUmakefile.in
@@ -7,7 +7,7 @@ SRCDIR		= @srcdir@
 TESTBED_SRCDIR	= @top_srcdir@
 OBJDIR		= @top_builddir@
 SUBDIR		= $(subst $(TESTBED_SRCDIR)/,,$(SRCDIR))
-TBLIB		= $(OBJDIR)/lib/libtb/libtb.a
+TBLIB		= $(TESTBED_LIBOBJDIR)/libtb/libtb.a
 
 SBIN_SCRIPTS    = 
 CDPROGS		= canaryd alertlistener
@@ -16,12 +16,12 @@ include $(OBJDIR)/Makeconf
 
 CC?=gcc
 CFLAGS+= -Wall -g -I${OBJDIR} -I/usr/local/include \
-		-I$(TESTBED_SRCDIR)/lib/libtb \
-		-I$(TESTBED_SRCDIR)/lib/event \
+		-I$(TESTBED_LIBSRCDIR)/libtb \
+		-I$(TESTBED_LIBSRCDIR)/event \
 		-DCLIENT_BINDIR='"$(CLIENT_BINDIR)"' \
 		-DLOG_TESTBED=$(LOG_TESTBED) \
 		-I/usr/local/include
-LDFLAGS+= -L${OBJDIR}/lib/libtb -L/usr/local/lib/mysql -L${OBJDIR}/lib/event
+LDFLAGS+= -L${TESTBED_LIBOBJDIR}/libtb -L/usr/local/lib/mysql -L${TESTBED_LIBOBJDIR}/event
 LDFLAGS+= $(LDSTATIC)
 LIBS+= -ltb -levent -lcrypto -L/usr/local/lib -lpubsub -lm
 CP= cp -pf
@@ -39,7 +39,7 @@ alertlistener: alertlistener.o
 	$(CC) $(CFLAGS) $(LDFLAGS) -o $@ alertlistener.o $(LIBS)
 
 $(TBLIB):
-	gmake -C $(OBJDIR)/lib
+	gmake -C ${TESTBED_LIBOBJDIR}
 
 version.c: canaryd.c childProcess.h childProcess.c networkInterface.h networkInterface.c canarydEvents.h canarydEvents.c auxfuncs.c auxfuncs.h alertlistener.c
 	echo >$@ "char build_info[] = \"Built `date +%d-%b-%Y` by `id -nu`@`hostname | sed 's/\..*//'`:`pwd`\";"
