Temp tweak to make sure we break out of WIMRELOAD mode.
This will get removed once I have time to figure out why we sometimes
get stuck here...

--- a/event/stated/stated.in
+++ b/event/stated/stated.in
@@ -917,6 +917,11 @@ sub stateTransition($$) {
 		elsif ($osid ne $defosid) {
 		    handleCtrlEvent($node,$trig);
 		}
+		# XXX tmp hack
+		elsif ($mode eq "WIMRELOAD") {
+		    info("$node: RESET in WIMRELOAD, but osid=defosid=$osid\n");
+		    handleCtrlEvent($node,$trig);
+		}
 		next;
 	    };
 	    (/^$TBRELOADDONEV1$/ || /^$TBRELOADDONEV2$/) && do {
