Have frisbee use clock_getres() on Linux to figure out clock resolution

--- a/os/frisbee.redux/GNUmakefile.in
+++ b/os/frisbee.redux/GNUmakefile.in
@@ -68,7 +68,7 @@ endif
 endif
 
 CLIENTFLAGS	= $(CFLAGS)
-CLIENTLIBS	= -lz $(PTHREADLIBS)
+CLIENTLIBS	= -lz -lrt $(PTHREADLIBS)
 CLIENTOBJS	= client.o frisbee.o checksum.o disksize.o $(SHAREDOBJS)
 
 SERVERFLAGS	= $(CFLAGS)
