--- a/os/frisbee.redux/Makefile-linux.sa
+++ b/os/frisbee.redux/Makefile-linux.sa
@@ -25,7 +25,7 @@ LINUXOPTS	= -D_FILE_OFFSET_BITS=64 -D_GNU_SOURCE \
 		  -D_XOPEN_SOURCE=500 -D_BSD_SOURCE=1
 
 CLIENTFLAGS	= $(CFLAGS)
-CLIENTLIBS	= -lz $(PTHREADLIBS)
+CLIENTLIBS	= -lz -lrt $(PTHREADLIBS)
 CLIENTOBJS	= client.o frisbee.o checksum.o disksize.o $(SHAREDOBJS)
 
 SERVERFLAGS	= $(CFLAGS)
