BUG FIX: Need -lrt (clock_getres) for uploader too.

--- a/os/frisbee.redux/GNUmakefile.in
+++ b/os/frisbee.redux/GNUmakefile.in
@@ -90,7 +90,11 @@ MSERVERLIBS	=
 
 # Master server based image uploader client
 UPLOADFLAGS	= $(CFLAGS)
+ifeq ($(SYSTEM),Linux)
+UPLOADLIBS	= -lrt
+else
 UPLOADLIBS	=
+endif
 UPLOADOBJS	= upload.o uploadio.o log.o network.o utils.o
 
 # Master server based image uploader server
