--- a/tbsetup/snmpit.proxyv2.in
+++ b/tbsetup/snmpit.proxyv2.in
@@ -185,7 +185,7 @@ my $goo      = $parser->parse(*XMLDOC);
 if (! ref($goo)) {
     fatal("$xmldoc could not be parsed!");
 }
-my $opargs  = $goo->value();
+my $opargs  = (@{$goo->args()}[0])->value();
 if (! (exists($opargs->{'op'}) && exists($opargs->{'args'}))) {
     fatal("missing arguments in xmlgoo");
 }
