Use {USERNODE,FSNODE}_IP to determine the value of ISFS.
It is possible for USERNODE and FSNODE to be set differently but still be
the same machine (we do it, and our defs-default file shows it). This will
badly mess up your ops install. So use the _IP settings instead.

--- a/install/ops-install.in
+++ b/install/ops-install.in
@@ -60,7 +60,7 @@ my $SHAREROOT	= "@SHAREROOT_DIR@";
 my $ELVIN_COMPAT= @ELVIN_COMPAT@;
 
 # True if we are also the FS node
-my $ISFS	= ($USERNODE eq $FSNODE) ? 1 : 0;
+my $ISFS	= ($USERNODE_IP eq $FSNODE_IP) ? 1 : 0;
 
 # Are we a VM on boss?
 my $OPSVM_ENABLE = @OPSVM_ENABLE@;
