Use Node method to get event state rather than libdb function.
The former will filter out the bogus NULLs we occasionally see.

--- a/tbsetup/libreboot.pm.in
+++ b/tbsetup/libreboot.pm.in
@@ -585,7 +585,7 @@ sub RebootNode {
     # stated is controlling the timeouts. Eventually stated gives up and uses
     # the -k option to force a power cycle.
     #
-    if (! TBGetNodeEventState($pc, \$nodestate)) {
+    if ($nodeobject->GetEventState(\$nodestate)) {
 	info("$pc has no event state: power cycle");
 	print STDERR "*** reboot ($pc): no event state; will power cycle.\n"
 	    if $debug;
