Use boss as the ssh proxy if inner ops is a VM.
Subtle: if your elabinelab uses a VM for ops, then there will be no
myops.eid.pid.emulab.net DNS alias created outside (since there is no actual
ops node in the topo) and thus the inner ops cannot be used as a proxy for
ssh'ing to the unroutable inner nodes. In that case we use the inner boss
instead.

--- a/www/defs.php3.in
+++ b/www/defs.php3.in
@@ -58,6 +58,7 @@ $USERSELECTUIDS = 1;
 $REMOTEWIKIDOCS = @REMOTEWIKIDOCS@;
 $GMAP_API_KEY   = "@GMAP_API_KEY@";
 $NONAMEDSETUP	= @DISABLE_NAMED_SETUP@;
+$OPS_VM		= @OPSVM_ENABLE@;
 
 $TBMAILADDR_OPS		= "@TBOPSEMAIL_NOSLASH@";
 $TBMAILADDR_WWW		= "@TBWWWEMAIL_NOSLASH@";
