Adjust the set of unix gids used for a download server.
When downloading an image, start the frisbeed process with the minimum set of
gids necessary to access the image. This includes the unix gid of the
project that the image is in and, optionally, the unix gid of the project
subgroup if the image is part of one.

Previously, we just use the gid set of the uid of the swapper of the
experiment. Not only was this excessive, but it might also not include the
gids needed in the case of a "global" image that is not in the world-readable
/usr/testbed/images directory.

--- a/os/imagezip/GNUmakefile.in
+++ b/os/imagezip/GNUmakefile.in
@@ -72,10 +72,10 @@ endif
 #
 WITH_FFS	= 1
 WITH_EXTFS	= 1
+WITH_EXT4FS	= 0
 WITH_NTFS	= @WINSUPPORT@
 WITH_FAT	= @WINSUPPORT@
 WITH_HASH	= 0
-WITH_EXT4FS	= 0
 
 include $(OBJDIR)/Makeconf
 
@@ -153,7 +153,8 @@ endif
 # Once proven, switch to 2.0.0.
 #
 ifndef NTFSVER
-NTFSVER		= 1.7.1
+#NTFSVER		= 1.7.1
+NTFSVER		= 2.0.0
 endif
 export		NTFSVER
 
