--- a/os/imagezip/ext4fs/GNUmakefile.in
+++ b/os/imagezip/ext4fs/GNUmakefile.in
@@ -1,6 +1,6 @@
 #
 # EMULAB-COPYRIGHT
-# Copyright (c) 2000-2004 University of Utah and the Flux Group.
+# Copyright (c) 2000-2011 University of Utah and the Flux Group.
 # All rights reserved.
 #
 
@@ -18,9 +18,9 @@ all:	libext4fs.a
 
 include $(TESTBED_SRCDIR)/GNUmakerules
 
-OBJS = ext4fs.o reloc_lilo.o
+OBJS = extfs.o reloc_lilo.o
 
-ext4fs.o: $(MAINDIR)/sliceinfo.h $(MAINDIR)/global.h
+extfs.o: $(MAINDIR)/sliceinfo.h $(MAINDIR)/global.h
 reloc_lilo.o: $(MAINDIR)/sliceinfo.h $(MAINDIR)/global.h $(MAINDIR)/imagehdr.h
 
 libext4fs.a:	$(OBJS)
