--- a/tbsetup/libvtop_stable.pm.in
+++ b/tbsetup/libvtop_stable.pm.in
@@ -32,7 +32,6 @@ use Carp;
 use POSIX;
 use XML::LibXML;
 use XML::Simple;
-use GeniHRN;
 
 # Configure variables
 my $TB		  = "@prefix@";
@@ -45,7 +44,12 @@ my $DELAYCAPACITY = @DELAYCAPACITY@;	# Can be overridden by user.
 my $DELAYTHRESH   = @DELAYTHRESH@;
 my $PGENISUPPORT  = @PROTOGENI_SUPPORT@;
 my $OURDOMAIN     = "@OURDOMAIN@";
-my $mycmurn       = GeniHRN::Generate("@OURDOMAIN@", "authority", "cm");
+my $mycmurn;
+
+if ($PGENISUPPORT) {
+    require GeniHRN;
+    $mycmurn = GeniHRN::Generate("@OURDOMAIN@", "authority", "cm");
+}
 
 # Flags.
 $VTOP_FLAGS_VERBOSE	= 0x01;
