--- a/tbsetup/ptopgen.in
+++ b/tbsetup/ptopgen.in
@@ -371,6 +371,8 @@ if ($PGENISUPPORT) {
   require GeniHRN;
 }
 
+use GeniHRN;
+
 sub usage()
 {
     print("Usage: ptopgen [-v] [-s switch] [-p pid [-e eid]] [-m factor] " .
